# SpaceBulletGame

./: CMakeLists.txt  README.md  main.cpp
components/: AnguloDisparo.h  CompBarraPoder.h  CompBarraVida.h  Componente.h  ExplosionProyectil.h  FlechaTurno.h  FondoPartida.h  GameOver.h  MascaraBarraPoder.h  ObsPersonaje.h  Observer.h  Personaje.h  Plataforma.h  Proyectil.h  TimerTurnos.h  factoryEscenarios.h
general/: Game.h  Menu.h  Partida.h
utils/: VectorUtil.h
